- Finish all paint sprays - Add Paint Removal Spray Can - Change GTItemWithUsesBehavior: make it accept a number of uses to decrease instead of decreasing the uses only by one; replace canUse() with getRemainingUses(); make the stacked multi-use checking method return boolean - Add GTItemWithUsesGameTestUtils for game testing of items with uses - Replace String.format() with String::formatted - Add stack trace to all logs - Removed @Slf4j where not needed - Add accesstransformer.cfg